# Skybox-Davi

./: .env.example  .gitignore  AGENTS.md  README.md  contract.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/analytics/: __init__.py  economy.py  heatmaps.py  map_projection.py  maps.py  matchups.py  metrics.py  player_stats.py  positions.py  reader.py  replay_frames.py  sites.py  utility.py  weapons.py
backend/app/api/: routes_demos.py  routes_maps.py  routes_matches.py  routes_replay.py  routes_stats.py
backend/app/core/: config.py  paths.py
backend/app/models/: __init__.py  schemas.py
backend/app/parsers/: __init__.py  errors.py  mock.py  normalize.py  parse_with_awpy.py  parse_with_demoparser2.py  real.py  result.py  schema.py
backend/app/storage/: db.py  duckdb.py  models.py  parquet.py
backend/app/tests/: conftest.py  test_demos.py  test_health.py  test_jobs.py  test_matchups.py  test_phase07_awpy_adapter.py  test_phase07_demoparser2_adapter.py  test_phase07_storage.py  test_phase08_api_analytics.py  test_phase08_metrics.py  test_weapons.py
backend/app/workers/: jobs.py  queue.py  run_worker.py
backend/scripts/: fetch_map_assets.py
contracts/: 00-indice.md  01-auditoria.md  02-estrutura.md  03-documentacao-base.md  04-backend-minimo.md  05-importacao-demos.md  06-jobs-parsing.md  07-parsing-real.md  08-api-analytics.md  09-frontend-base.md  10-dashboard.md  11-demos-ui.md  12-match-report.md  16-qa.md  (+4 more)
(+61 files in other folders)
